tests/expectations/parser/finalize/finalize_statement_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370005]: expected ; -- found 'finalize'
    --> test:1:13
     |
   1 | return then finalize;
     |             ^^^^^^^^""",
    """
Error [EPAR0370005]: expected ; -- found 'finalize'
    --> test:1:13
     |
   1 | return then finalize();
     |             ^^^^^^^^""",
    """
Error [EPAR0370005]: expected ; -- found 'finalize'
    --> test:1:13
     |
   1 | return then finalize(foo);
     |             ^^^^^^^^""",
    """
Error [EPAR0370005]: expected ; -- found 'finalize'
    --> test:1:13
     |
   1 | return then finalize(foo, bar);
     |             ^^^^^^^^""",
]
